# H4PD100125

./: README.md
BigData/http_todo/: main.c
BigData/http_todo/http-todo/: DELETE.bru  GETALL.bru  UPDATE.bru  bruno.json
BigData/web_scraper/: computere.csv  computere.db  computere.html  consumer.py  scraper.py
BigData1/: producer.py  schema_registry.md
BigData2/http_todo/: CMakeLists.txt  main.c
BigData2/http_todo/http-todo/: GET.bru  POST.bru
BigData2/web_scraper/: producer.py
IOT1/: atmega2560_blink.c  atmega328pb_blink.c  dht22_example.c  dht22_example.elf  dht22_example.hex  eeprom_language_to_flashprom.c  flashprom_str_to_uart.c  sequential_blinking.c  simple_sequential_blinking.c  uart_eeprom.c  uart_toggle.c
IOT1/oled_hello_world/: Makefile  main.c
IOT1/oled_hello_world/lib/: ssd1306.c
IOT1/zigbee/: discover.py  factory_reset.py  get_high_low_id.py  receiver.py  sender.py  set_api.py  set_pan.py  set_transparent.py
IOT1/zigbee/dht22/: Makefile  main.c  main.c.old
IOT1/zigbee/opgave2/: Makefile  main.c
IOT1/zigbee/opgave4/: Makefile  main.c
IOT1/zigbee/opgave4/lib/: twi.c  twi.h
IOT2/: opagave1.json  opagave2.json  opagave3.json  opagave4.json  opagave5.json  opagave6.json
Intro/: forventninger.md
Linux/: menu  tic-tac-toe
